--- a/.env.development
+++ b/.env.development
@@ -13,3 +13,11 @@ POSTGRES_EXTERNAL_PORT=5432
 
 # Database URL for Backend
 DATABASE_URL=postgresql+psycopg://lazybird_dev:lazybird_password@db:5432/sales_report
+
+# Backend Config
+BACKEND_PORT=8000
+PYTHON_ENV=development
+
+# Frontend Config
+FRONTEND_PORT=3000
+NODE_ENV=development
