--- a/docker/compose.yaml
+++ b/docker/compose.yaml
@@ -38,5 +38,22 @@ services:
       retries: 3
       start_period: 40s
 
+  frontend:
+    build: ../frontend
+    container_name: sales_report_frontend
+    environment:
+      - NODE_ENV=${NODE_ENV}
+      - REACT_APP_API_URL=http://localhost:${BACKEND_PORT}
+    ports:
+      - "${FRONTEND_PORT}:3000"
+    volumes:
+      - ../frontend/src:/app/src
+      - ../frontend/public:/app/public
+    depends_on:
+      backend:
+        condition: service_healthy
+    stdin_open: true
+    tty: true
+
 volumes:
   postgres_data:
