--- a/docker/compose.test.yaml
+++ b/docker/compose.test.yaml
@@ -1,9 +1,9 @@
 services:
   test-db:
     image: postgres:15
-    container_name: sales_reports_test_db
+    container_name: orders_reports_test_db
     environment:
-      POSTGRES_DB: test_sales_reports
+      POSTGRES_DB: test_orders_reports
       POSTGRES_USER: test_user
       POSTGRES_PASSWORD: test_password
     ports:
@@ -13,16 +13,16 @@ services:
     tmpfs:
       - /var/lib/postgresql/data
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U test_user -d test_sales_reports"]
+      test: ["CMD-SHELL", "pg_isready -U test_user -d test_orders_reports"]
       interval: 5s
       timeout: 5s
       retries: 5
 
   test-backend:
     build: ../backend
-    container_name: sales_reports_test_backend
+    container_name: orders_reports_test_backend
     environment:
-      - DATABASE_URL=postgresql+psycopg://test_user:test_password@test-db:5432/test_sales_reports
+      - DATABASE_URL=postgresql+psycopg://test_user:test_password@test-db:5432/test_orders_reports
       - PYTHON_ENV=test
     depends_on:
       test-db:
@@ -35,7 +35,7 @@ services:
 
   test-runner:
     build: ../backend
-    container_name: sales_reports_test_runner
+    container_name: orders_reports_test_runner
     environment:
       - PYTHON_ENV=test
       - API_URL=http://test-backend:8000
